<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.subwayinovators.sevira.LoginActivity">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView"
        app:srcCompat="@mipmap/ic_arrow_back_black_24dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/azul_questao"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/retTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/email"
        android:src="@drawable/retangulo_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/retTexto"
        app:layout_constraintLeft_toLeftOf="@+id/retTexto"
        app:layout_constraintRight_toRightOf="@+id/retTexto"
        app:layout_constraintTop_toTopOf="@+id/retTexto" />

    <ImageView
        android:id="@+id/retTexto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/senha"
        android:src="@drawable/retangulo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/retTexto" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/retTexto2"
        app:layout_constraintLeft_toLeftOf="@+id/retTexto2"
        app:layout_constraintRight_toRightOf="@+id/retTexto2"
        app:layout_constraintTop_toTopOf="@+id/retTexto2" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/botao_concluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/txtEsqueci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/esqueci_minha_senha"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/retTexto2"
        app:layout_constraintStart_toStartOf="@id/retTexto2"
        app:layout_constraintTop_toBottomOf="@id/retTexto2" />


</android.support.constraint.ConstraintLayout>
